feat:add model parameters
