# internal/api/v1/ai_model/dto.go
@@ -10,6 +10,7 @@ type AIModelListItem struct {
 	Name        string               `json:"name"`
 	Description string               `json:"description"`
 	Status      models.AIModelStatus `json:"status"`
+	Parameters  models.JSON          `json:"parameters"`
 	CreatedAt   time.Time            `json:"created_at"`
 	UpdatedAt   time.Time            `json:"updated_at"`
 }
@@ -25,8 +26,16 @@ type UpdateStatusRequest struct {
 	Status models.AIModelStatus `json:"status" binding:"required,oneof=open closed draft"`
 }
 
+type UpdateModelRequest struct {
+	Name        string               `json:"name"`
+	Description string               `json:"description"`
+	Status      models.AIModelStatus `json:"status" binding:"omitempty,oneof=open closed draft"`
+	Parameters  models.JSON          `json:"parameters"`
+}
+
 type CreateModelRequest struct {
 	Name        string               `json:"name" binding:"required"`
 	Description string               `json:"description"`
 	Status      models.AIModelStatus `json:"status" binding:"required,oneof=open closed draft"`
+	Parameters  models.JSON          `json:"parameters"`
 }
